auto/k3s/mailpit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: mailpit.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailpit
            port:
              number: 80
